fix: core accordion layout overflow - allow layout overflow for positioned content items closes #5710

--- a/packages/core/src/accordion/accordion-content.element.scss
+++ b/packages/core/src/accordion/accordion-content.element.scss
@@ -11,6 +11,7 @@
   --font-weight: #{$cds-global-typography-font-weight-semibold};
   --background: #{$cds-alias-object-interaction-background};
   width: 100%;
+  contain: inherit;
 }
 
 .private-host {
